--- a/app/_wing-watch-core/components/login-registro/login/loginView.html
+++ b/app/_wing-watch-core/components/login-registro/login/loginView.html
@@ -1,7 +1,8 @@
-<form class="ui form login center aligned">
-    <div class="ui two column padded centered aligned grid">
+<form class="ui form login">
+    <div class="ui two column padded centered aligned grid">        
         <div class="column">
-            <img class="ui small centered rounded image" src="assets/img/Wing-Watch-login.png" height="200" width="200" alt="">
+            <img class="ui small centered rounded image" src="assets/img/Wing-Watch-login.png" height="150" width="150" alt="">
+    
             <div class="field">
                 <div class="ui icon input">
                     <input type="email" name="email" placeholder="Correo Electrónico">
