--- a/app/_wing-watch-core/components/login-registro/registro/registroView.html
+++ b/app/_wing-watch-core/components/login-registro/registro/registroView.html
@@ -45,7 +45,7 @@
             <div class="field">
                 <div class="ui test radio checkbox">
                     <input type="radio" name="tipo">
-                    <label> Onitólogo </label>
+                    <label> Ornitólogo </label>
                 </div>
             </div>
         </div>
