--- a/app/assets/css/home.css
+++ b/app/assets/css/home.css
@@ -36,9 +36,6 @@ body {
     font-size: 50px;
 }
 
-.iconSize2 {
-    font-size: 40px;
-}
 
 .ui.button.uiside {
     position: absolute;
@@ -68,8 +65,26 @@ body {
     top: 1%;
 }
 
+.iconSize2 {
+    font-size: 50px;
+}
+
 .config {
     position: absolute;
     left: 1%;
     bottom: 10%;
+}
+
+.ui.button.randomCarrousel {
+    font-size: 40px;
+    position: absolute;
+    right: 46%;
+    bottom: 8%;   
+}
+
+.ui.button.loginIcon {
+    font-size: 40px;
+    position: absolute;
+    right: 1%;
+    bottom: 10%;   
 }
