Registro de usuarios funcional - Arreglo de procedimiento para insertar usuarios

--- a/app/_wing-watch-core/components/login-registro/registro/registroView.html
+++ b/app/_wing-watch-core/components/login-registro/registro/registroView.html
@@ -57,14 +57,14 @@
         <div class="grouped inline fields">
             <div class="field">
                 <div class="ui test radio checkbox">
-                    <input type="radio" name="tipo" checked>
-                    <label> Aficionado </label>
+                    <input type="radio" name="tipo" value="aficionado" id="aficionado" checked>
+                    <label for="aficionado"> Aficionado </label>
                 </div>
             </div>
             <div class="field">
                 <div class="ui test radio checkbox">
-                    <input type="radio" name="tipo">
-                    <label> Ornitólogo </label>
+                    <input type="radio" name="tipo" value="ornitologo" id="ornitologo">
+                    <label for="ornitologo"> Ornitólogo </label>
                 </div>
             </div>
         </div>
