Inicio de sesión y guardado en sessionStorage

--- a/app/_wing-watch-core/components/login-registro/login/loginView.html
+++ b/app/_wing-watch-core/components/login-registro/login/loginView.html
@@ -5,8 +5,8 @@
     
             <div class="field">
                 <div class="ui icon input">
-                    <input type="email" name="email" placeholder="Correo Electrónico">
-                    <i class="mail icon"></i>
+                    <input type="text" name="apodo" placeholder="Nickname">
+                    <i class="smile icon"></i>
                 </div>
             </div>
             <div class="field">
