--- a/app/_wing-watch-core/components/users/usersView.html
+++ b/app/_wing-watch-core/components/users/usersView.html
@@ -6,7 +6,7 @@
             <div class="content">
                 Usuarios de Wing Watch
             </div>
-            <img src="assests/img/iconPerson.png">
+            <img src="assets/img/iconPerson.png">
             </h1>
         </div>
         <div class="ui segment">
