Cambio de dropdowns
Actualización del home y primeros cambios al preset de casos de prueba

--- a/app/_wing-watch-core/components/home/homeView.html
+++ b/app/_wing-watch-core/components/home/homeView.html
@@ -32,6 +32,8 @@
         </div>
     </div>
 
+    <div class="ui icon asd"> <i class="question big icon"> </i></div>
+
     <div id="TJS">
         <!-- Acá se carga el modelo -->
     </div>  
